--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, expedita? Exercitationem corporis sunt necessitatibus quaerat, aperiam voluptatem aliquid hic minima magni voluptates repudiandae expedita tempora. Aut non quisquam suscipit ducimus!</p>
     </div>
+    <div>
+        <h3>My second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, expedita? Exercitationem corporis sunt necessitatibus quaerat, aperiam voluptatem aliquid hic minima magni voluptates repudiandae expedita tempora. Aut non quisquam suscipit ducimus!</p>
+    </div>
+    <div>
+        <h3>My third blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, expedita? Exercitationem corporis sunt necessitatibus quaerat, aperiam voluptatem aliquid hic minima magni voluptates repudiandae expedita tempora. Aut non quisquam suscipit ducimus!</p>
+    </div>
 </body>
 </html>
