--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>My third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, expedita? Exercitationem corporis sunt necessitatibus quaerat, aperiam voluptatem aliquid hic minima magni voluptates repudiandae expedita tempora. Aut non quisquam suscipit ducimus!</p>
     </div>
+    <div>
+        <h3>how to push increnental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaning commited messge</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
